# mal

./: IMPLS.yml  Makefile.impls  README.md
impls/gleam/: Dockerfile  Makefile  README.md  gleam.toml  manifest.toml  package-lock.json  run
impls/gleam/src/: core.gleam  env.gleam  mal.gleam  mut_cell.gleam  mut_cell_ffi.mjs  printer.gleam  reader.gleam  readline.gleam  readline_ffi.mjs  step0_repl.gleam  step1_read_print.gleam  step2_eval.gleam  step3_env.gleam  step4_if_fn_do.gleam  step5_tco.gleam  step6_file.gleam  step7_quote.gleam  step8_macros.gleam  step9_try.gleam  stepa_mal.gleam  types.gleam
impls/ocaml2/: Makefile  dune-project  run
impls/ocaml2/dune.lock/: linenoise.pkg  lock.dune
impls/ocaml2/lib/: dune  read_line.ml
impls/rust/: Cargo.toml  Makefile  core.rs  env.rs  reader.rs  step0_repl.rs  step1_read_print.rs  step2_eval.rs  step3_env.rs  step4_if_fn_do.rs  step5_tco.rs  step6_file.rs  step7_quote.rs  step8_macros.rs  step9_try.rs  stepA_mal.rs  types.rs
