[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
itertools = "0.14.0"
lazy_static = "1.5.0"
regex = "1.11.1"
rustyline = "16.0.0"

[[bin]]
name = "step0_repl"
path = "step0_repl.rs"

[[bin]]
name = "step1_read_print"
path = "step1_read_print.rs"

[[bin]]
name = "step2_eval"
path = "step2_eval.rs"

[[bin]]
name = "step3_env"
path = "step3_env.rs"

[[bin]]
name = "step4_if_fn_do"
path = "step4_if_fn_do.rs"

[[bin]]
name = "step5_tco"
path = "step5_tco.rs"

[[bin]]
name = "step6_file"
path = "step6_file.rs"

[[bin]]
name = "step7_quote"
path = "step7_quote.rs"

[[bin]]
name = "step8_macros"
path = "step8_macros.rs"
